--- a/style.css
+++ b/style.css
@@ -126,3 +126,30 @@ body {
     margin-top: -10em;
     padding: 0;
 }
+
+label {
+    color: white;
+    margin-right: 10%;
+}
+
+#sell {
+    margin-right: 12%;
+    font-size: 20px;
+    padding-left: 12px;
+    padding-right: 12px;
+    padding-top: 8px;
+    padding-left: 8px;
+    padding-bottom: 8px;
+    border-radius: 10%;
+    background-color: #9a0606;
+    border: none;
+    color: white;
+}
+
+.sell-item {
+    text-align: right;
+}
+
+textarea {
+    color: #9a0606;
+}
