--- a/style.css
+++ b/style.css
@@ -7,34 +7,19 @@ body {
     float: left;
 }
 
-#navbar-cart {
-    float: right;
+.navbar {
+    background-color: lightgreen;
+}
+
+.navbar-cart {
     font-size: 20px;
     background-color: rgb(4, 143, 4);
     color: white;
-    padding-left: 40px;
-    padding-right: 40px;
+    padding-left: 20px;
+    padding-right: 20px;
 }
 
 .fa-plus-square {
-    cursor: pointer;
-}
-
-.navbar {
-    overflow: hidden;
-    background-color: rgba(133, 255, 133, 0.514);
-    position: fixed;
-    top: 0;
-    width: 100%;
-}
-
-.navbar a {
-    float: left;
-    display: block;
-    color: black;
-    text-align: center;
-    padding: 14px 16px;
-    text-decoration: none;
     cursor: pointer;
 }
 
@@ -42,7 +27,7 @@ a:hover {
     color: grey;
 }
 
-#navbar-cart:hover {
+.navbar-cart:hover {
     color: black;
 }
 
@@ -53,12 +38,61 @@ a:hover {
 
 #hr-1 {
     width: 50em;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid rgb(4, 143, 4);
+    padding: 0;
 }
 
 #hr-2 {
     width: 40em;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid rgb(4, 143, 4);
+    padding: 0;
 }
 
 #hr-3 {
     width: 30em;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid rgb(4, 143, 4);
+    padding: 0;
+}
+
+#hr-4 {
+    width: 20em;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid rgb(4, 143, 4);
+    padding: 0;
+}
+
+#hr-5 {
+    width: 10em;
+    display: block;
+    height: 1px;
+    border: 0;
+    border-top: 1px solid rgb(4, 143, 4);
+    padding: 0;
+}
+
+.panel-body {
+    height: 415px;
+}
+
+.img-center {
+    text-align: center;
+}
+
+.container-fluid {
+    cursor: pointer;
+}
+
+#clothing-title {
+    color: rgb(4, 143, 4);
 }
