--- a/photos/Elegant Spirit_files/style.css
+++ b/photos/Elegant Spirit_files/style.css
@@ -13,10 +13,10 @@ body {
 
 .navbar-cart {
     font-size: 20px;
-    color: black;
+    background-color: rgb(4, 143, 4);
+    color: white;
     padding-left: 20px;
     padding-right: 20px;
-    font-weight: bold;
 }
 
 .fa-plus-square {
